youfull/objects/Search_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Generation_Filter__c</fullName>
        <label>Generation Filter</label>
        <picklist>
            <picklistValues>
                <fullName>1st Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Generation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ldr_Gene_Filter_1__c</fullName>
        <label>Ldr Gene Filter 1</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Generation Leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Generation Non-Leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Generation Leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Generation Non-Leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Generation Leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Generation Non-Leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon LOA 1-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon LOA 7 - 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon LOA + 1 year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ldr_Gene_Filter_2__c</fullName>
        <label>Ldr Gene Filter 2</label>
        <picklist>
            <picklistValues>
                <fullName>All Conditions</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Personal Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Qualifier not Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Qualifier Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promoted to Next Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Anniversary (upcoming)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday (upcoming)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone_Div_Title_Filter__c</fullName>
        <label>Zone Div Title Filter</label>
        <picklist>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone_Gene_Filter_1__c</fullName>
        <label>Zone Gene Filter 1</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon LOA 1-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon LOA 7 - 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon LOA + 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership LOA 1-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership LOA 7 - 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership LOA + 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Titled Representatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Reports</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Search Criteria</label>
    <nameField>
        <displayFormat>SRCH-{000000}</displayFormat>
        <label>Search Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Criterias</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>